--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node-dev --respawn src src/index.ts"
+    "dev": "ts-node-dev --respawn src src/index.ts",
+    "test": "jest",
+    "test:coverage": "jest --coverage" 
   },
   "keywords": [],
   "author": "",
