--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node-dev --respawn src src/index.ts",
+    "test": "jest",
     "test:coverage": "jest --coverage"
   },
   "keywords": [],
