--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
+  },
+  "compilerOptions": {
+    "module": "esnext",
+    "moduleResolution": "node",
+    "verbatimModuleSyntax": true
   }
+
 }
